# h5chat

./: Cargo.toml  README.md  myconfig.toml
src/: chatroom.rs  helper.rs  index.rs  macros.rs  main.rs  midware.rs  user.rs
src/config/: config_manager.rs  lib.rs  mod.rs
src/dbdesign/: h5chatroom.rs  h5manager.rs  lib.rs  mod.rs
src/tmp/: create_table_h5chatroom.rs  create_table_h5msg.rs  create_table_h5user.rs  main_tmp.rs
views/: board.html  chatroom.html  index.html  login.html  mustlogin.html  register.html
views/board/: index.html  newroom.html
